# Agriculture-Bot

./: README.md  agribot.py  connect_memory_with_llm.py  main.py  pyproject.toml
vectorstore/db_faiss/: index.faiss  index.pkl
