[project]
name = "agriculture-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "huggingface-hub>=0.30.2",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-huggingface>=0.1.2",
    "pypdf>=5.4.0",
    "streamlit>=1.44.1",
]
